--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
   </head>
 
   <body>
+    <%= render 'shared/navbar' %>
+
     <%= yield %>
+
+    <%= render 'shared/flashes' %>
   </body>
 </html>
