--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .container {
   background-position: center;
-  background-color: rgb(33, 238, 14);
+  background-color: #1CDD87;
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 60px 60px;
