Final homepage has been completed(kinda)

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 60px 60px;
-  width: 1500px;
+  width: 1250px;
   height: 350px;
 }
 
@@ -25,22 +25,25 @@ h1 {
 
 p {
   text-align: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: large;
 }
 
 .cards {
   display: flex;
-  margin: 80px;
+  margin: 60px;
 }
 
 .home-p {
-  padding: 0px 20px;
+  padding: 0px 36px;
   font-size: 20px;
   text-align: justify;
 }
 
 h2 {
-  display: flex;
+  text-align: center;
+  padding: 10px 16px;
+  size: 26px;
 }
 
 #logo-recy {
@@ -52,4 +55,50 @@ h2 {
 .nav-link {
   margin-right: 20px;
   width: 160px;
+}
+
+.carousel.slide {
+  width: 1365px;
+  height: 350px;
+  margin: 40px 40px;
+  padding: 25px 60px;
+  box-shadow: #1CDD87;
+}
+
+.carousel-item{
+  width: 1250px;
+  height: 350px;
+}
+
+h3 {
+  size: 12px;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer {
+  background: #F4F4F4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
+}
+.footer-links {
+  display: flex;
+  align-items: center;
+}
+.footer-links a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.footer-links a:hover {
+  opacity: 1;
+}
+.footer .fa-heart {
+  color: #D23333;
 }
