--- a/app/views/pick_ups/new.html.erb
+++ b/app/views/pick_ups/new.html.erb
@@ -1,1 +1,2 @@
-<h1><%= @pick_up_package %></h1>
+<h1 style="color: black"><%= @pick_up_package.address %></h1>
+<h1 style="color: black"><%= @pick_up_package.content %></h1>
