Created two buttons My Pickups and Confirmed Pickups, created a new view, created  conditional dropdown items on the list on the navbar, added new action list_my_picked_up_packages to the packages controller, updated package policy, we set the packages index to show only the packages that have not been picked up yet.

--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -25,6 +25,9 @@
     <tbody>
       <% @packages.each do |package| %>
         <tr>
+        <% if package.picked_up == true %>
+          <% next %>
+        <% else %>
           <td><%= package.address %></td>
           <td><%= package.content %></td>
           <td><%= package.user.email %></td>
@@ -37,6 +40,7 @@
               <!--user_pick_ups_path-->
             <% end %>
           <% end %>
+        <% end %>
         </tr>
       <% end %>
     </tbody>
