--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,12 +15,18 @@
             <%= link_to "Home", root_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <!--<%= link_to "Messages", "#", class: "nav-link" %>-->
+            <!--<%= link_to "My Pickups", pick_ups_path, class: "nav-link" %>-->
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "All Packages", packages_path, class: "dropdown-item" %>
+              <% @pick_ups = PickUp.all %>
+              <% if @pick_ups.find{|pick_up| pick_up.user_id == current_user.id} %>
+                <%= link_to "My Pickups", pick_ups_path, class: "dropdown-item" %>
+              <% end %>
+              <% @packages = Package.all %>
+              <%= link_to "Confirmed Pickups", list_my_picked_up_packages_packages_path, class: "dropdown-item" %>
               <!--<%= link_to "Another action", "#", class: "dropdown-item" %>-->
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
