--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,13 +9,6 @@
   height: 350px;
 }
 
-// .row {
-//   width: 600px;
-//   height: 300px;
-//   padding: 30px 30px;
-//   // text-align: center;
-// }
-
 h1 {
   font-size: 70px;
   color: azure;
@@ -23,9 +16,12 @@ h1 {
   // padding: 25px;
 }
 
+h3 {
+  font-family: $body-font;
+}
+
 p {
   text-align: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: large;
 }
 
@@ -57,6 +53,8 @@ h2 {
   width: 160px;
 }
 
+// Carousel
+
 .carousel.slide {
   width: 1365px;
   height: 350px;
@@ -75,6 +73,8 @@ h3 {
   padding: 20px;
   text-align: center;
 }
+
+// Footer
 
 .footer {
   background: #F4F4F4;
@@ -100,7 +100,7 @@ h3 {
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: #4ed233;
 }
 
 .card-category {
@@ -122,4 +122,52 @@ h3 {
 #Packages-title {
   align-items: center;
   display: flex;
+}
+
+
+
+// navbar buttons
+
+a.nav-link.btn.btn-flat {
+  color: #16B756;
+  margin: 10px 10px;
+  padding: 8px 4px;
+  border-radius: 50px;
+  background: white;
+  transition: background 0.3s ease;
+  font-size: 20px;
+}
+
+a.nav-link.btn.btn-flat:hover {
+  color: #ffffff;
+  opacity: 2;
+  background: #1CDD87;
+  text-decoration: none;
+}
+
+// Avatar
+
+.avatar-large {
+  width: 56px;
+  border-radius: 50%;
+  margin-right: 40px;
+  margin-left: 55px;
+  margin-top: 5px;
+}
+
+// Dropdown menu
+
+a.dropdown-item:hover {
+  color: #ffffff;
+  opacity: 2;
+  background: #1CDD87;
+  text-decoration: none;
+}
+
+div.dropdown-menu.dropdown-menu-end.show {
+  margin-right: 40px;
+}
+
+.row {
+  margin: 20px 20px;
 }
