--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -47,6 +47,16 @@
   </table>
 </div>
 <%# <br> %>
+  <div class="cards">
+    <div class="card-category">
+    <strong>Address</strong>
+    <strong>Content</strong>
+    <strong>User</strong>
+    <strong>Show</strong>
+    <strong>Picked up</strong>
+
+    </div>
+  </div>
 
 <% if policy(Package).create? %>
   <%= link_to 'New Package', new_package_path %>
