--- a/app/views/pick_ups/index.html.erb
+++ b/app/views/pick_ups/index.html.erb
@@ -13,7 +13,7 @@
     <% if pick_up.user_id == current_user.id && pick_up.package_id == package.id %>
       <strong>Package's Address</strong>
         <p><%= package.address %></p>
-      <strong>Package's Address</strong>
+      <strong>Package's Content</strong>
         <p><%= package.content %></p>
       <strong>Package's Picked Up</strong>
         <p><%= package.picked_up %></p>
