--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -124,8 +124,6 @@ h3 {
   display: flex;
 }
 
-
-
 // navbar buttons
 
 a.nav-link.btn.btn-flat {
@@ -144,6 +142,10 @@ a.nav-link.btn.btn-flat:hover {
   background: #1CDD87;
   text-decoration: none;
 }
+
+// #package-button {
+//   padding: 0px 50px;
+// }
 
 // Avatar
 
