Added cancel offer functionality using the destroy pick_up action and also setting the package picked_up attribute back to false so it appears again to be picked up on the packages page.

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -130,8 +130,8 @@ h3 {
 
 a.nav-link.btn.btn-flat {
   color: #16B756;
-  margin: 10px 10px;
-  padding: 8px 4px;
+  margin: 22px 14px;
+  padding: 0;
   border-radius: 50px;
   background: white;
   transition: background 0.3s ease;
