--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,24 +10,24 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
-          <li class="nav-item active">
-            <%= link_to "Recycler mode", root_path, class: "nav-link btn btn-flat" %>
-          </li>
         <% if user_signed_in? %>
+        <li class="nav-item active">
+            <%= link_to "Be a recycler", root_path, class: "nav-link btn btn-flat" %>
+          </li>
           <li class="nav-item active" id="package-button">
             <%= link_to "Add Package", root_path, class: "nav-link btn btn-flat"  %>
           </li>
-          <li class="nav-item active">
-          <% @pick_ups = PickUp.all %>
-              <% if @pick_ups.find{|pick_up| pick_up.user_id == current_user.id} %>
-                <%= link_to "My Pickups", pick_ups_path, class: "nav-link btn btn-flat" %>
-              <% end %>
+          <li class="nav-item">
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class:"avatar-large dropdown-toggle", alt:"avatar-large", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "All Packages", packages_path, class: "dropdown-item" %>
-              <!--<% @packages = Package.all %>-->
+              <% @pick_ups = PickUp.all %>
+              <% if @pick_ups.find{|pick_up| pick_up.user_id == current_user.id} %>
+                <%= link_to "My Pickups", pick_ups_path, class: "dropdown-item" %>
+              <% end %>
+              <% @packages = Package.all %>
               <%= link_to "Confirmed Pickups", list_my_picked_up_packages_packages_path, class: "dropdown-item" %>
               <!--<%= link_to "Another action", "#", class: "dropdown-item" %>-->
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
