created styling for addpackages page

--- a/app/views/packages/_form.html.erb
+++ b/app/views/packages/_form.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :content %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions" id="package_button">
     <%= f.button :submit %>
   </div>
 <% end %>
