--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,18 +12,17 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
         <li class="nav-item active">
-            <%= link_to "Be a recycler", root_path, class: "nav-link btn btn-flat" %>
+            <%= link_to "Be a recycler", packages_path, class: "nav-link btn btn-flat" %>
+              <% @pick_ups = PickUp.all %>
           </li>
           <li class="nav-item active" id="package-button">
-            <%= link_to "Add Package", root_path, class: "nav-link btn btn-flat"  %>
+            <%= link_to "Add Package", new_package_path, class: "nav-link btn btn-flat"  %>
           </li>
           <li class="nav-item">
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class:"avatar-large dropdown-toggle", alt:"avatar-large", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "All Packages", packages_path, class: "dropdown-item" %>
-              <% @pick_ups = PickUp.all %>
               <% if @pick_ups.find{|pick_up| pick_up.user_id == current_user.id} %>
                 <%= link_to "My Pickups", pick_ups_path, class: "dropdown-item" %>
               <% end %>
