Card gradient inverse colors

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -7,5 +7,5 @@
 }
 
 .card-category {
-  background-image: linear-gradient(#16B756, #25EA7F, #aaf0c9);;
+  background-image: linear-gradient(#aaf0c9, #25EA7F, #16B756);;
 }
