Changes in confirmed pick-ups and footer social media hover buttons

--- a/app/assets/stylesheets/pages/_login_signup.scss
+++ b/app/assets/stylesheets/pages/_login_signup.scss
@@ -14,16 +14,16 @@
   color: white;
 }
 
-.container {
-  background-color: white;
-  margin-top: 12px;
-  align-items: center;
-  padding: 20px;
-  margin-left: 115px;
-  border-radius: 50px;
-  width: 1200px;
-  height: 375px;
-}
+// .container {
+//   background-color: white;
+//   margin-top: 12px;
+//   align-items: center;
+//   padding: 20px;
+//   margin-left: 115px;
+//   border-radius: 50px;
+//   width: 1200px;
+//   height: 375px;
+// }
 
 #container_two {
   background-color: white;
