--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "cards";
+@import "container";
+@import "navbar";
+@import "footer";
