--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 // Specific CSS for your home-page
-.container {
+.my-container-style {
   background-position: center;
   background-color: #1CDD87;
   margin-top: 50px;
@@ -11,9 +11,8 @@
 
 h1 {
   font-size: 70px;
-  color: azure;
+  color: #ffffff;
   text-align: center;
-  // padding: 25px;
 }
 
 h3 {
@@ -122,6 +121,7 @@ h3 {
 #Packages-title {
   align-items: center;
   display: flex;
+  color: #ffffff;
 }
 
 // navbar buttons
