--- a/app/views/packages/new.html.erb
+++ b/app/views/packages/new.html.erb
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <div class="adjust">
   <div class="recycling_container row justify-content-center">
       <div class = "col-12 col-md-10 col-lg-8">
