--- a/app/views/pick_ups/new.html.erb
+++ b/app/views/pick_ups/new.html.erb
@@ -1,2 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <h1 style="color: black"><%= @pick_up_package.address %></h1>
 <h1 style="color: black"><%= @pick_up_package.content %></h1>
