--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <p id="notice"><%= notice %></p>
 
 <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/vmontenegro7/image/upload/v1646415427/Recy-Buddies/Think-Cans_i67goa.png)">
