--- a/app/views/packages/list_my_picked_up_packages.html.erb
+++ b/app/views/packages/list_my_picked_up_packages.html.erb
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <% @my_packages.each do |my_package|%>
   <p><strong>Address</strong></p>
     <%= my_package.address %>
