--- a/app/views/packages/show.html.erb
+++ b/app/views/packages/show.html.erb
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <div class="container show packages">
   <div class="row justify-content-center">
     <div class="class-4">
