Footer - show-packages - extra-stuff

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -13,3 +13,8 @@ i.fab.fa-instagram:hover {
 i.fab.fa-linkedin:hover {
   color: #0072b1;
 }
+.page-container {
+display: grid;
+grid-template-rows: auto 1fr auto;
+min-height: 100vh;
+}
