--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -89,7 +89,7 @@ h3 {
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  // color: black;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
