final changes for page layout

--- a/app/assets/stylesheets/pages/_pick_ups.scss
+++ b/app/assets/stylesheets/pages/_pick_ups.scss
@@ -28,7 +28,9 @@
 .container-pickups {
   background: #143C6D;
   display: flex;
-  margin-top: 20px;
+  margin-top: 45px;
+  padding: 20px;
+  border-radius: 15px;
 }
 
 // .btn-danger {
