--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,28 +7,28 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://res.cloudinary.com/vmontenegro7/image/upload/v1646415427/Recy-Buddies/Think-Cans_i67goa.png" class="d-block w-100" alt="...">
+      <img src="https://images.pexels.com/photos/3738388/pexels-photo-3738388.jpeg?cs=srgb&dl=pexels-polina-tankilevitch-3738388.jpg&fm=jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>Recy-Buddies</h1>
         <h3>Was created to promote a recycling culture in developing countries ♻️🤍</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://res.cloudinary.com/vmontenegro7/image/upload/v1646415429/Recy-Buddies/think-cans-recycling-aluminium_d5mkqa.png" class="d-block w-100" alt="...">
+      <img src="https://images.pexels.com/photos/761297/pexels-photo-761297.jpeg?cs=srgb&dl=pexels-krizjohn-rosales-761297.jpg&fm=jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>Recy-Buddies</h1>
         <h3>Was created to promote a recycling culture in developing countries ♻️🤍</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://res.cloudinary.com/vmontenegro7/image/upload/v1646415425/Recy-Buddies/Think-Cans-How-To-Recycle_kzmviz.png" class="d-block w-100" alt="...">
+      <img src="https://res.cloudinary.com/vmontenegro7/image/upload/v1646766882/Recy-Buddies/pexels-mart-production-7767756_byfqwm.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>Recy-Buddies</h1>
         <h3>Was created to promote a recycling culture in developing countries ♻️🤍</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://res.cloudinary.com/vmontenegro7/image/upload/v1646415635/Recy-Buddies/think-cans-cash-from-cans_ignwjc.png" class="d-block w-100" alt="...">
+      <img src="https://res.cloudinary.com/vmontenegro7/image/upload/v1646713301/Recy-Buddies/hands-holding-plastic-1024x683_u0ee5d.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>Recy-Buddies</h1>
         <h3>Was created to promote a recycling culture in developing countries ♻️🤍</h3>
@@ -47,15 +47,21 @@
 
 <div class="cards">
   <div>
-    <h2><strong>User</strong></h2>
-    <p class="home-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit molestias,
-    minima in voluptatibus nostrum aut eos nobis ipsa totam iure possimus odio dolores
-    eveniet eligendi earum, sint enim cum velit.</p>
+    <h2 class="blue-color"><strong>Do you want to contribute to the word?</strong></h2>
+    <p class="home-p gray-color"><strong>Recy-Buddies</strong> is a platform that
+    connects people that are interested in starting a recycling habit but
+    don't know where to start and also people that recycle at their homes,
+    work, and the recyclers that collect this items and sell them as
+    a form of income. This platform helps you dispose your recycling items in
+     the best way possible and make this world a cleaner place for us all.
+    <strong class="green-color">HAPPY RECYCLING!</strong></p>
   </div>
   <div>
-    <h2><strong>Recycler</strong></h2>
-    <p class="home-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit molestias,
-    minima in voluptatibus nostrum aut eos nobis ipsa totam iure possimus odio dolores
-    eveniet eligendi earum, sint enim cum velit.</p>
+    <h2 class="blue-color"><strong>If you are a recycler, this is the place for you!</strong></h2>
+    <p class="home-p gray-color">Hello friends of the Earth! We want to make your life easier
+    with this platform. We know how challenging it can be to pick-up recycling items
+    one by one from all around the city. This can be solved with a little help from our friends,
+    so we will connect you with all the people that have recycling items ready to give to you!
+    <strong class="green-color">Thank you for the great contribution to Mother Earth!</strong></p>
   </div>
 </div>
